--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "10isoplus",
-  "version": "1.0.0-alpha",
-  "description": "Wrapper for Microsoft's Windows 10 ISO download page with aditional features.",
+  "version": "v1.0.0-alpha",
+  "description": "Wrapper for Microsoft's Windows 10 ISO download page with additional features.",
   "main": "src/main.js",
   "scripts": {
     "start": "electron ."
